fixed bug with BackButton showing over modal background - BackButton.js now not in use and button is rendered directly through Gallery. z-indexs set on modal css elements

--- a/src/components/Events.css
+++ b/src/components/Events.css
@@ -26,6 +26,8 @@ hr {
     display: flex;
     flex-direction: column;
     margin-top: 2rem;
+    margin-right: 7%;
+    margin-left: 7%;
     /* width: 100%; */
     text-align: center;
 }
